# snapsharp-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: publish.yml
mcp/: README.md  package.json
mcp/src/: client.ts  index.ts
mcp/src/tools/: analyze.ts  batch.ts  diff.ts  extract.ts  html-to-image.ts  og-image.ts  pdf.ts  screenshot.ts  scroll.ts  site-audit.ts  video.ts
n8n/: package-lock.json  package.json  tsconfig.json
n8n/credentials/: SnapSharpApi.credentials.ts
n8n/nodes/SnapSharp/: SnapSharp.node.ts
sdk-go/: README.md  errors.go  go.mod  snapsharp.go  types.go
sdk-node/: README.md  package.json  tsconfig.json
sdk-node/src/: client.ts  errors.ts  index.ts  types.ts
sdk-php/: README.md  composer.json
sdk-php/src/: SnapSharp.php
sdk-php/src/Errors/: AuthException.php  RateLimitException.php  SnapSharpException.php  TimeoutException.php
sdk-python/: README.md  pyproject.toml
sdk-python/snapsharp/: __init__.py  client.py  errors.py
sdk-ruby/: README.md  snapsharp.gemspec
sdk-ruby/lib/: snapsharp.rb
sdk-ruby/lib/snapsharp/: client.rb  errors.rb  version.rb
