[project]
name = "snapsharp"
version = "1.0.0"
description = "Official Python SDK for SnapSharp Screenshot & OG Image API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]
keywords = ["screenshot", "api", "og-image", "html-to-image"]

[project.urls]
Homepage = "https://snapsharp.dev"
Documentation = "https://snapsharp.dev/docs"
Repository = "https://github.com/bogdanov-igor/snapsharp-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
